--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   http: ^1.6.0
   path_provider: ^2.1.5
   shared_preferences: ^2.5.3
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
